Fixed sidebar spacing around the vertical line

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -444,5 +444,8 @@ figcaption {
 		ul {
 			padding: 0;
 		}
+		li + li {
+			margin-left: 0.5em;
+		}
 	}
 }
